fix: optimize rightBanner text align and if the line that shows from replyCollection

--- a/src/components/ReplyCollection/ReplyCollection.module.scss
+++ b/src/components/ReplyCollection/ReplyCollection.module.scss
@@ -1,9 +1,8 @@
 .replyCollectionContainer {
   width: 641px;
   // 用 padding 而不用 margin，這樣 border 才不會出現空白段
-  padding-top: 10px;
-  border-left: 1px solid #E6ECF0;
-  border-right: 1px solid #E6ECF0;
+  border-left: 1px solid #e6ecf0;
+  border-right: 1px solid #e6ecf0;
 }
 
 .margin {
